--- a/HTML/css/filter.css
+++ b/HTML/css/filter.css
@@ -11,15 +11,14 @@
 input[type="radio"] { display: none; }
 
 label {
+	font-size:22px;
 	margin: 0px 10px;
 	cursor: pointer;
 }
 
 #elementos { margin-top: 20px; }
 
-img {
-	margin: 5px;
-}
+
 
 #contenedor #cerca:checked ~ #elementos .salon,
 #contenedor #cerca:checked ~ #elementos .escenario {
