--- a/HTML/css/filter.css
+++ b/HTML/css/filter.css
@@ -15,6 +15,13 @@ label {
 	margin: 0px 10px;
 	cursor: pointer;
 }
+select {
+	margin: 10px;
+	padding: 5px 35px 5px 5px;
+	font-size: 16px;
+	border: 1px solid #CCC;
+	height: 30px;
+}
 
 #elementos { margin-top: 20px; }
 
